--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
                         <h3 class="card-title uk-margin-remove uk-text-bold">Tiệc Nhà Gái
                         </h3>
                         <address class="uk-margin-remove">
-                            <p>Thôn Lũng Thượng - xã Yên Lạc - tỉnh Phú Thọ</p>
+                            <p>Thôn Lũng Thượng - xã Tam Hồng - tỉnh Phú Thọ</p>
                         </address>
                         <div class="invitation-body">
                             <div class="invi_time">
